# back/internal/api/types.gen.go
@@ -9,6 +9,29 @@ import (
 	openapi_types "github.com/oapi-codegen/runtime/types"
 )
 
+// ExpenseRequest defines model for ExpenseRequest.
+type ExpenseRequest struct {
+	Amount    int       `json:"amount"`
+	Category  string    `json:"category"`
+	Date      time.Time `json:"date"`
+	Memo      *string   `json:"memo,omitempty"`
+	StoreName string    `json:"store_name"`
+	UserId    int       `json:"user_id"`
+}
+
+// ExpenseResponse defines model for ExpenseResponse.
+type ExpenseResponse struct {
+	Amount    int       `json:"amount"`
+	Category  string    `json:"category"`
+	CreatedAt time.Time `json:"created_at"`
+	Date      time.Time `json:"date"`
+	Id        int       `json:"id"`
+	Memo      *string   `json:"memo,omitempty"`
+	PayerName *string   `json:"payer_name,omitempty"`
+	StoreName string    `json:"store_name"`
+	UserId    int       `json:"user_id"`
+}
+
 // SignUpRequest defines model for SignUpRequest.
 type SignUpRequest struct {
 	Email    openapi_types.Email `json:"email"`
@@ -26,6 +49,21 @@ type UserResponse struct {
 	Image     *string             `json:"image,omitempty"`
 	Name      string              `json:"name"`
 }
+
+// GetExpensesParams defines parameters for GetExpenses.
+type GetExpensesParams struct {
+	// Year Year to filter expenses
+	Year int `form:"year" json:"year"`
+
+	// Month Month to filter expenses
+	Month int `form:"month" json:"month"`
+
+	// Category Category to filter expenses
+	Category *string `form:"category,omitempty" json:"category,omitempty"`
+}
+
+// PostExpensesJSONRequestBody defines body for PostExpenses for application/json ContentType.
+type PostExpensesJSONRequestBody = ExpenseRequest
 
 // PostSignupJSONRequestBody defines body for PostSignup for application/json ContentType.
 type PostSignupJSONRequestBody = SignUpRequest
